@startuml StarWarShipDiagram
' Kelas-Kelas

' Kelas Background Star
class BackgroundStar {
    - radius : int
    - image : Surface
    - rect : Rect
    - speed : float
    + __init__()
    + update()
}

' Kelas Player
class Player {
    - image : Surface
    - rect : Rect
    - alive : bool
    - count_to_live : int
    - activate_bullet : bool
    - alpha_duration : int
    + __init__(image_path : str)
    + update()
    + shoot()
    + dead()
    + _respawn()
}

' Kelas BaseEnemy
class BaseEnemy {
    - image : Surface
    - rect : Rect
    - movement_type : str
    - speed : float
    - direction : int
    - shoot_interval : int
    - last_shot_time : int
    + __init__(image_path : str, movement_type : str, shoot_interval : int, speed : float, start_pos : Tuple[int, int], size : Tuple[int, int])
    + update()
    - _move()
    - _shoot()
    - _fire_bullet(image : str, offset_x : int, offset_y : int)
}

' Kelas Bullet
class Bullet {
    - image : Surface
    - rect : Rect
    - speed : float
    + __init__(img : str, x : int, y : int, speed : float, group : Group, size : Tuple[int, int], center : bool)
    + update()
}

' Kelas Explosion
class Explosion {
    - img_list : List[Surface]
    - index : int
    - image : Surface
    - rect : Rect
    - count_delay : int
    + __init__(x : int, y : int, size : Tuple[int, int])
    - _load_image(path : str)
    + update()
}

' Child Class dari Kelas BaseEnemy
class VerticalEnemy {
    + __init__(start_pos : Tuple[int, int])
}

class HorizontalEnemy {
    + __init__(start_pos : Tuple[int, int])
}

class FastEnemy {
    + __init__(start_pos : Tuple[int, int])
}

' Kelas Game
class Game {
    - lives: int
    - score: int
    - count_hit_enemy1: int
    - count_hit_enemy2: int
    - count_hit_sideenemy: int
    - font: pygame.font.Font
    - star_group: pygame.sprite.Group
    + __init__()
    + start_text()
    + start_screen()
    + game_over()
    + pause_screen()
    + create_background()
    + create_player()
    + create_enemy()
    + create_sideenemy()
    + create_enemy2()
    + handle_player_collision()
    + handle_bullet_collision()
    + enemybullet_hits_player()
    + sideenemy_hits_player()
    + display_hud()
    + handle_events()
    + run_collisions()
    + run_update()
    + run_game()
}

' Relasi Antar Kelas
BackgroundStar --> Player : update
Player --> Bullet : shoot
Player --> Explosion : dead
BaseEnemy --> Bullet : _fire_bullet
BaseEnemy <|-- VerticalEnemy
BaseEnemy <|-- HorizontalEnemy
BaseEnemy <|-- FastEnemy
BaseEnemy --> Explosion : update
Bullet --> Explosion : update
Player --|> Game : mengendalikan
BaseEnemy --|> Game : dibuat oleh
Explosion --|> Game : dipicu oleh tabrakan

@enduml
